--- a/.github/workflows/bridge.yml
+++ b/.github/workflows/bridge.yml
@@ -98,6 +98,10 @@ jobs:
         run: |
           ~/.cargo/bin/flutter_rust_bridge_codegen --rust-input ./src/flutter_ffi.rs --dart-output ./flutter/lib/generated_bridge.dart --c-output ./flutter/macos/Runner/bridge_generated.h
           cp ./flutter/macos/Runner/bridge_generated.h ./flutter/ios/Runner/bridge_generated.h
+          # Verify files exist before upload
+          test -f ./flutter/lib/generated_bridge.dart || exit 1
+          test -f ./flutter/macos/Runner/bridge_generated.h || exit 1
+          test -f ./flutter/ios/Runner/bridge_generated.h || exit 1
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
@@ -107,6 +111,8 @@ jobs:
             ./flutter/lib/generated_bridge.dart
             ./flutter/macos/Runner/bridge_generated.h
             ./flutter/ios/Runner/bridge_generated.h
+          retention-days: 1
+          if-no-files-found: error
 
       # Cleanup to prevent cache bloat
       - name: Cleanup build artifacts
