--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -176,17 +176,34 @@ jobs:
         continue-on-error: true
         with:
           name: bridge-artifact
-          path: ./
+          path: downloaded_bridge_files
 
-      - name: Verify bridge files
+      - name: Process bridge files
         run: |
-          if [ ! -f "./flutter/lib/generated_bridge.dart" ] || \
-             [ ! -f "./flutter/macos/Runner/bridge_generated.h" ] || \
-             [ ! -f "./flutter/ios/Runner/bridge_generated.h" ]; then
-            echo "Bridge files not found, regenerating locally..."
-            mkdir -p flutter/lib
-            mkdir -p flutter/macos/Runner
-            mkdir -p flutter/ios/Runner
+          if [ -d "downloaded_bridge_files" ]; then
+            echo "Listing downloaded artifacts:"
+            find downloaded_bridge_files -type f
+            
+            # If files exist in the downloaded structure, copy them to the correct location
+            if [ -f "downloaded_bridge_files/flutter/lib/generated_bridge.dart" ] && \
+               [ -f "downloaded_bridge_files/flutter/macos/Runner/bridge_generated.h" ]; then
+              echo "Found bridge files in artifact, copying to correct locations..."
+              mkdir -p flutter/lib flutter/macos/Runner flutter/ios/Runner
+              cp -r downloaded_bridge_files/flutter/* flutter/
+              echo "Verifying copied files:"
+              ls -la flutter/lib/generated_bridge.dart
+              ls -la flutter/macos/Runner/bridge_generated.h
+              ls -la flutter/ios/Runner/bridge_generated.h
+            else
+              echo "Bridge files not found in expected structure"
+              mkdir -p flutter/lib flutter/macos/Runner flutter/ios/Runner
+              echo "Regenerating bridge files locally..."
+              ~/.cargo/bin/flutter_rust_bridge_codegen --rust-input ./src/flutter_ffi.rs --dart-output ./flutter/lib/generated_bridge.dart --c-output ./flutter/macos/Runner/bridge_generated.h
+              cp ./flutter/macos/Runner/bridge_generated.h ./flutter/ios/Runner/bridge_generated.h
+            fi
+          else
+            echo "No downloaded artifacts found, regenerating locally..."
+            mkdir -p flutter/lib flutter/macos/Runner flutter/ios/Runner
             ~/.cargo/bin/flutter_rust_bridge_codegen --rust-input ./src/flutter_ffi.rs --dart-output ./flutter/lib/generated_bridge.dart --c-output ./flutter/macos/Runner/bridge_generated.h
             cp ./flutter/macos/Runner/bridge_generated.h ./flutter/ios/Runner/bridge_generated.h
           fi
