--- a/.github/workflows/bridge.yml
+++ b/.github/workflows/bridge.yml
@@ -98,19 +98,31 @@ jobs:
         run: |
           ~/.cargo/bin/flutter_rust_bridge_codegen --rust-input ./src/flutter_ffi.rs --dart-output ./flutter/lib/generated_bridge.dart --c-output ./flutter/macos/Runner/bridge_generated.h
           cp ./flutter/macos/Runner/bridge_generated.h ./flutter/ios/Runner/bridge_generated.h
-          # Verify files exist before upload
-          test -f ./flutter/lib/generated_bridge.dart || exit 1
-          test -f ./flutter/macos/Runner/bridge_generated.h || exit 1
-          test -f ./flutter/ios/Runner/bridge_generated.h || exit 1
+          echo "Verifying generated files..."
+          ls -la ./flutter/lib/generated_bridge.dart
+          ls -la ./flutter/macos/Runner/bridge_generated.h
+          ls -la ./flutter/ios/Runner/bridge_generated.h
+
+      - name: Create artifact structure
+        run: |
+          # Create a clean directory structure for artifacts
+          mkdir -p bridge_files/flutter/lib
+          mkdir -p bridge_files/flutter/macos/Runner
+          mkdir -p bridge_files/flutter/ios/Runner
+          
+          # Copy files with their full directory structure
+          cp ./flutter/lib/generated_bridge.dart bridge_files/flutter/lib/
+          cp ./flutter/macos/Runner/bridge_generated.h bridge_files/flutter/macos/Runner/
+          cp ./flutter/ios/Runner/bridge_generated.h bridge_files/flutter/ios/Runner/
+          
+          echo "Verifying artifact structure:"
+          find bridge_files -type f
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: bridge-artifact
-          path: |
-            ./flutter/lib/generated_bridge.dart
-            ./flutter/macos/Runner/bridge_generated.h
-            ./flutter/ios/Runner/bridge_generated.h
+          path: bridge_files
           retention-days: 1
           if-no-files-found: error
 
