--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -186,25 +186,36 @@ jobs:
             
             # If files exist in the downloaded structure, copy them to the correct location
             if [ -f "downloaded_bridge_files/flutter/lib/generated_bridge.dart" ] && \
-               [ -f "downloaded_bridge_files/flutter/macos/Runner/bridge_generated.h" ]; then
+               [ -f "downloaded_bridge_files/flutter/macos/Runner/bridge_generated.h" ] && \
+               [ -f "downloaded_bridge_files/src/bridge_generated.rs" ]; then
               echo "Found bridge files in artifact, copying to correct locations..."
-              mkdir -p flutter/lib flutter/macos/Runner flutter/ios/Runner
+              mkdir -p flutter/lib flutter/macos/Runner flutter/ios/Runner src
               cp -r downloaded_bridge_files/flutter/* flutter/
+              cp -r downloaded_bridge_files/src/* src/
               echo "Verifying copied files:"
               ls -la flutter/lib/generated_bridge.dart
               ls -la flutter/macos/Runner/bridge_generated.h
               ls -la flutter/ios/Runner/bridge_generated.h
+              ls -la src/bridge_generated.rs
             else
               echo "Bridge files not found in expected structure"
-              mkdir -p flutter/lib flutter/macos/Runner flutter/ios/Runner
+              mkdir -p flutter/lib flutter/macos/Runner flutter/ios/Runner src
               echo "Regenerating bridge files locally..."
-              ~/.cargo/bin/flutter_rust_bridge_codegen --rust-input ./src/flutter_ffi.rs --dart-output ./flutter/lib/generated_bridge.dart --c-output ./flutter/macos/Runner/bridge_generated.h
+              ~/.cargo/bin/flutter_rust_bridge_codegen \
+                --rust-input ./src/flutter_ffi.rs \
+                --dart-output ./flutter/lib/generated_bridge.dart \
+                --c-output ./flutter/macos/Runner/bridge_generated.h \
+                --rust-output ./src/bridge_generated.rs
               cp ./flutter/macos/Runner/bridge_generated.h ./flutter/ios/Runner/bridge_generated.h
             fi
           else
             echo "No downloaded artifacts found, regenerating locally..."
-            mkdir -p flutter/lib flutter/macos/Runner flutter/ios/Runner
-            ~/.cargo/bin/flutter_rust_bridge_codegen --rust-input ./src/flutter_ffi.rs --dart-output ./flutter/lib/generated_bridge.dart --c-output ./flutter/macos/Runner/bridge_generated.h
+            mkdir -p flutter/lib flutter/macos/Runner flutter/ios/Runner src
+            ~/.cargo/bin/flutter_rust_bridge_codegen \
+              --rust-input ./src/flutter_ffi.rs \
+              --dart-output ./flutter/lib/generated_bridge.dart \
+              --c-output ./flutter/macos/Runner/bridge_generated.h \
+              --rust-output ./src/bridge_generated.rs
             cp ./flutter/macos/Runner/bridge_generated.h ./flutter/ios/Runner/bridge_generated.h
           fi
 
