--- a/.github/workflows/bridge.yml
+++ b/.github/workflows/bridge.yml
@@ -100,13 +100,21 @@ jobs:
             --rust-input ./src/flutter_ffi.rs \
             --dart-output ./flutter/lib/generated_bridge.dart \
             --c-output ./flutter/macos/Runner/bridge_generated.h \
-            --rust-output ./src/bridge_generated.rs
+            --rust-output ./src/bridge_generated.rs \
+            --class-name RustDesk \
+            --skip-add-mod-to-lib
+          
+          # Create the io module file
+          echo "// Auto-generated file" > ./src/bridge_generated.io.rs
+          grep -A999999 "^mod io {" ./src/bridge_generated.rs | tail -n +2 | grep -B999999 "^}" | head -n -1 > ./src/bridge_generated.io.rs
+          
           cp ./flutter/macos/Runner/bridge_generated.h ./flutter/ios/Runner/bridge_generated.h
           echo "Verifying generated files..."
           ls -la ./flutter/lib/generated_bridge.dart
           ls -la ./flutter/macos/Runner/bridge_generated.h
           ls -la ./flutter/ios/Runner/bridge_generated.h
           ls -la ./src/bridge_generated.rs
+          ls -la ./src/bridge_generated.io.rs
 
       - name: Create artifact structure
         run: |
@@ -121,6 +129,7 @@ jobs:
           cp ./flutter/macos/Runner/bridge_generated.h bridge_files/flutter/macos/Runner/
           cp ./flutter/ios/Runner/bridge_generated.h bridge_files/flutter/ios/Runner/
           cp ./src/bridge_generated.rs bridge_files/src/
+          cp ./src/bridge_generated.io.rs bridge_files/src/
           
           echo "Verifying artifact structure:"
           find bridge_files -type f
