--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -212,8 +212,7 @@ jobs:
                 --skip-add-mod-to-lib
               
               # Create the io module file
-              echo "// Auto-generated file" > ./src/bridge_generated.io.rs
-              grep -A999999 "^mod io {" ./src/bridge_generated.rs | tail -n +2 | grep -B999999 "^}" | head -n -1 > ./src/bridge_generated.io.rs
+              awk '/^mod io \{/,/^}/ { if (!/^mod io \{/ && !/^}/) print }' ./src/bridge_generated.rs > ./src/bridge_generated.io.rs
               
               cp ./flutter/macos/Runner/bridge_generated.h ./flutter/ios/Runner/bridge_generated.h
             fi
@@ -229,8 +228,7 @@ jobs:
               --skip-add-mod-to-lib
             
             # Create the io module file
-            echo "// Auto-generated file" > ./src/bridge_generated.io.rs
-            grep -A999999 "^mod io {" ./src/bridge_generated.rs | tail -n +2 | grep -B999999 "^}" | head -n -1 > ./src/bridge_generated.io.rs
+            awk '/^mod io \{/,/^}/ { if (!/^mod io \{/ && !/^}/) print }' ./src/bridge_generated.rs > ./src/bridge_generated.io.rs
             
             cp ./flutter/macos/Runner/bridge_generated.h ./flutter/ios/Runner/bridge_generated.h
           fi
