--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -93,86 +93,34 @@ jobs:
 
   build-for-macos-flutter:
     name: Build macOS
-    runs-on: self-hosted
+    runs-on: macos-latest
     needs: [generate-bridge]
     strategy:
       fail-fast: false
       matrix:
         job:
+          #- {
+          #    target: x86_64-apple-darwin,
+          #    os: macos-13,
+          #    extra-build-args: "",
+          #    arch: x86_64,
+          #    vcpkg-triplet: x64-osx,
+          #  }
           - {
               target: aarch64-apple-darwin,
+              os: macos-latest,
+              extra-build-args: "",
               arch: arm64,
               vcpkg-triplet: arm64-osx,
             }
 
     steps:
-      - name: Clean workspace
-        run: |
-          rm -rf ./* || true
-          rm -rf ./.??* || true
-          rm -rf ~/.pub-cache/hosted || true
-
-      - name: Setup build cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            ~/.pub-cache
-            target
-            flutter/build
-            ~/Library/Caches/CocoaPods
-            ~/Library/Developer/Xcode/DerivedData
-            ${{ github.workspace }}/vcpkg
-            ${{ env.VCPKG_DEFAULT_BINARY_CACHE }}
-          key: ${{ runner.os }}-build-${{ matrix.job.target }}-${{ hashFiles('**/Cargo.lock', '**/Podfile.lock', 'flutter/pubspec.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ matrix.job.target }}-
-            ${{ runner.os }}-build-
-
       - name: Export GitHub Actions cache environment variables
         uses: actions/github-script@v6
         with:
           script: |
             core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
             core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
-
-      - name: Setup Flutter cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.pub-cache
-            ~/.flutter
-          key: flutter-pub-macos-stable-${{ env.FLUTTER_VERSION }}-${{ runner.arch }}-${{ hashFiles('**/pubspec.lock') }}-${{ hashFiles('**/pubspec.yaml') }}
-          restore-keys: |
-            flutter-pub-macos-stable-${{ env.FLUTTER_VERSION }}-${{ runner.arch }}-
-        id: flutter-cache
-
-      - name: Cache Cargo
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-        id: cargo-cache
-
-      - name: Cleanup cache
-        if: always()
-        run: |
-          # Remove unnecessary files from cargo cache
-          rm -rf ~/.cargo/registry/index/*
-          rm -rf ~/.cargo/registry/cache/*
-          rm -rf ~/.cargo/git/db/*
-          
-          # Remove unnecessary files from flutter cache
-          rm -rf ~/.pub-cache/hosted
-          rm -rf ~/.flutter/bin/cache/artifacts
 
       - name: Set rdgen value
         if: ${{ fromJson(inputs.extras).rdgen == 'true' }}
@@ -207,122 +155,17 @@ jobs:
             repository: rustdesk/rustdesk
             submodules: recursive
 
-      - name: Download bridge artifact
-        uses: actions/download-artifact@v3
-        id: download
-        continue-on-error: true
+      - name: Restore bridge files
+        uses: actions/download-artifact@master
         with:
-          name: bridge-artifact
-          path: downloaded_bridge_files
+              name: bridge-artifact
+              path: ./
 
-      - name: Process bridge files
+      - name: Install imagemagick and potrace and nasm and and
+        shell: bash
         run: |
-          if [ -d "downloaded_bridge_files" ]; then
-            echo "Listing downloaded artifacts:"
-            find downloaded_bridge_files -type f
-            
-            # If files exist in the downloaded structure, copy them to the correct location
-            if [ -f "downloaded_bridge_files/flutter/lib/generated_bridge.dart" ] && \
-               [ -f "downloaded_bridge_files/flutter/macos/Runner/bridge_generated.h" ] && \
-               [ -f "downloaded_bridge_files/src/bridge_generated.rs" ] && \
-               [ -f "downloaded_bridge_files/src/bridge_generated.io.rs" ]; then
-              echo "Found bridge files in artifact, copying to correct locations..."
-              mkdir -p flutter/lib flutter/macos/Runner flutter/ios/Runner src
-              cp -r downloaded_bridge_files/flutter/* flutter/
-              cp -r downloaded_bridge_files/src/* src/
-              echo "Verifying copied files:"
-              ls -la flutter/lib/generated_bridge.dart
-              ls -la flutter/macos/Runner/bridge_generated.h
-              ls -la flutter/ios/Runner/bridge_generated.h
-              ls -la src/bridge_generated.rs
-              ls -la src/bridge_generated.io.rs
-            else
-              echo "Bridge files not found in expected structure"
-              mkdir -p flutter/lib flutter/macos/Runner flutter/ios/Runner src
-              echo "Regenerating bridge files locally..."
-              ~/.cargo/bin/flutter_rust_bridge_codegen \
-                --rust-input ./src/flutter_ffi.rs \
-                --dart-output ./flutter/lib/generated_bridge.dart \
-                --c-output ./flutter/macos/Runner/bridge_generated.h \
-                --rust-output ./src/bridge_generated.rs \
-                --class-name PlatformFFI \
-                --dart-decl-output ./flutter/lib/generated_bridge_definitions.dart \
-                --dart-impl-output ./flutter/lib/generated_bridge_impl.dart \
-                --wasm
-              
-              # Create the io module file
-              awk '/^mod io \{/,/^}/ { if (!/^mod io \{/ && !/^}/) print }' ./src/bridge_generated.rs > ./src/bridge_generated.io.rs
-              
-              cp ./flutter/macos/Runner/bridge_generated.h ./flutter/ios/Runner/bridge_generated.h
-            fi
-          else
-            echo "No downloaded artifacts found, regenerating locally..."
-            mkdir -p flutter/lib flutter/macos/Runner flutter/ios/Runner src
-            ~/.cargo/bin/flutter_rust_bridge_codegen \
-              --rust-input ./src/flutter_ffi.rs \
-              --dart-output ./flutter/lib/generated_bridge.dart \
-              --c-output ./flutter/macos/Runner/bridge_generated.h \
-              --rust-output ./src/bridge_generated.rs \
-              --class-name PlatformFFI \
-              --dart-decl-output ./flutter/lib/generated_bridge_definitions.dart \
-              --dart-impl-output ./flutter/lib/generated_bridge_impl.dart \
-              --wasm
-            
-            # Create the io module file
-            awk '/^mod io \{/,/^}/ { if (!/^mod io \{/ && !/^}/) print }' ./src/bridge_generated.rs > ./src/bridge_generated.io.rs
-            
-            cp ./flutter/macos/Runner/bridge_generated.h ./flutter/ios/Runner/bridge_generated.h
-          fi
-
-      - name: Setup Homebrew packages
-        run: |
-          # Only install if not already installed
-          which cmake || brew install cmake
-          which ninja || brew install ninja
-          which nasm || brew install nasm
-
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@v1
-        with:
-          toolchain: ${{ env.MAC_RUST_VERSION }}
-          targets: ${{ matrix.job.target }}
-          components: "rustfmt"
-
-      - name: Setup Cargo cache directory
-        run: |
-          mkdir -p ~/.cargo/registry
-          mkdir -p ~/.cargo/git
-          mkdir -p target
-
-      - name: Cleanup build artifacts
-        if: always()
-        run: |
-          rm -rf target/debug/
-          rm -rf target/release/deps/
-          rm -rf ~/.cargo/registry/src/
-          rm -rf ~/Library/Caches/CocoaPods/Pods/Release/
-
-      - name: Setup vcpkg with binary cache
-        uses: lukka/run-vcpkg@v11
-        with:
-          vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
-          doNotCache: false
-          vcpkgTriplet: ${{ matrix.job.vcpkg-triplet }}
-
-      - name: Install vcpkg dependencies
-        run: |
-          if ! $VCPKG_ROOT/vcpkg \
-            install \
-            --x-install-root="$VCPKG_ROOT/installed"; then
-            find "${VCPKG_ROOT}/" -name "*.log" | while read -r _1; do
-              echo "$_1:"
-              echo "======"
-              cat "$_1"
-              echo "======"
-              echo ""
-            done
-            exit 1
-          fi
+          brew install imagemagick potrace nasm cmake gcc wget ninja
+          echo "$(brew --prefix imagemagick)/bin" >> $GITHUB_PATH
 
       - name: Update macOS Info.plist and settings
         continue-on-error: false
@@ -412,6 +255,41 @@ jobs:
           sed -i -e 's/_setFramesEnabledState(false);/\/\/_setFramesEnabledState(false);/g' ../packages/flutter/lib/src/scheduler/binding.dart
           grep -n '_setFramesEnabledState(false);' ../packages/flutter/lib/src/scheduler/binding.dart
         
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@v1
+        with:
+            toolchain: ${{ env.MAC_RUST_VERSION }}
+            targets: ${{ matrix.job.target }}
+            components: "rustfmt"
+  
+        
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: ${{ matrix.job.os }}
+
+      - name: Setup vcpkg with Github Actions binary cache
+        uses: lukka/run-vcpkg@v11
+        with:
+            vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
+            doNotCache: false
+  
+      - name: Install vcpkg dependencies
+        run: |
+          if ! $VCPKG_ROOT/vcpkg \
+            install \
+            --x-install-root="$VCPKG_ROOT/installed"; then
+            find "${VCPKG_ROOT}/" -name "*.log" | while read -r _1; do
+              echo "$_1:"
+              echo "======"
+              cat "$_1"
+              echo "======"
+              echo ""
+            done
+            exit 1
+          fi
+          head -n 100 "${VCPKG_ROOT}/buildtrees/ffmpeg/build-${{ matrix.job.vcpkg-triplet }}-rel-out.log" || true
+        shell: bash
+
       - name: Magick stuff for macOS
         if: ${{ inputs.iconlink != 'false' }}
         continue-on-error: false
@@ -594,6 +472,13 @@ jobs:
           git apply statussort.diff
       
       
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@v1
+        with:
+            toolchain: ${{ env.MAC_RUST_VERSION }}
+            targets: ${{ matrix.job.target }}
+            components: "rustfmt"
+
       - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
@@ -603,6 +488,10 @@ jobs:
           data: '{"uuid": "${{ inputs.uuid }}", "status": "15% complete"}'
   
         
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: ${{ matrix.job.os }}
+
       - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
@@ -610,6 +499,35 @@ jobs:
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
           data: '{"uuid": "${{ inputs.uuid }}", "status": "20% complete"}'
+
+      - name: Setup vcpkg with Github Actions binary cache
+        uses: lukka/run-vcpkg@v11
+        with:
+            vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
+            doNotCache: false
+  
+      - name: Install vcpkg dependencies
+        run: |
+          if ! $VCPKG_ROOT/vcpkg \
+            install \
+            --x-install-root="$VCPKG_ROOT/installed"; then
+            find "${VCPKG_ROOT}/" -name "*.log" | while read -r _1; do
+              echo "$_1:"
+              echo "======"
+              cat "$_1"
+              echo "======"
+              echo ""
+            done
+            exit 1
+          fi
+
+      - name: Report Status
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: ${{ env.STATUS_URL }}
+          method: 'POST'
+          customHeaders: '{"Content-Type": "application/json"}'
+          data: '{"uuid": "${{ inputs.uuid }}", "status": "25% complete"}'
 
       - name: Create MacOS directory structure
         run: |
@@ -640,13 +558,14 @@ jobs:
           data: '{"uuid": "${{ inputs.uuid }}", "status": "50% complete, this step takes about 5 minutes, be patient."}'
       
       - name: Install rcodesign tool
-        if: env.MACOS_P12_BASE64 != ''
+        if: env.MACOS_P12_BASE64 != null
+        shell: bash
         run: |
-          curl -L -o apple-codesign.tar.gz https://github.com/indygreg/apple-platform-rs/releases/download/apple-codesign%2F0.22.0/apple-codesign-0.22.0-macos-universal.tar.gz
-          tar -xzvf apple-codesign.tar.gz
-          sudo mkdir -p /usr/local/bin
-          sudo mv apple-codesign-0.22.0-macos-universal/rcodesign /usr/local/bin/
-          rm -rf apple-codesign*
+          pushd /tmp
+          wget https://github.com/indygreg/apple-platform-rs/releases/download/apple-codesign%2F0.22.0/apple-codesign-0.22.0-macos-universal.tar.gz
+          tar -zxvf apple-codesign-0.22.0-macos-universal.tar.gz
+          mv apple-codesign-0.22.0-macos-universal/rcodesign /usr/local/bin
+          popd
 
       - name: Install build runtime
         run: |
